--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
     "koa-bodyparser": "^4.4.1",
+    "koa2-ratelimit": "^1.1.3",
     "mongoose": "^8.4.0",
     "nodemon": "^3.1.1",
     "pkce-challenge": "^4.1.0"
