--- a/package.json
+++ b/package.json
@@ -2,17 +2,25 @@
   "name": "openxss-server",
   "version": "0.1.1",
   "description": "Server for OpenXSS Manager",
-  "type": "module",
-  "main": "index.js",
+  "type": "commonjs",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node ./build/index.js",
+    "dev": "nodemon ./src/index.ts  ",
+    "build": "tsc"
   },
   "author": "Fwy13",
   "license": "MIT",
   "dependencies": {
     "@koa/cors": "^5.0.0",
     "@koa/router": "^12.0.1",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/koa": "^2.15.0",
+    "@types/koa-bodyparser": "^4.3.12",
+    "@types/koa-cors": "^0.0.6",
+    "@types/koa__cors": "^5.0.0",
+    "@types/koa__router": "^12.0.4",
+    "@types/mongoose": "^5.11.97",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
@@ -20,6 +28,8 @@
     "koa2-ratelimit": "^1.1.3",
     "mongoose": "^8.4.0",
     "nodemon": "^3.1.1",
-    "pkce-challenge": "^4.1.0"
+    "pkce-challenge": "^4.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.2"
   }
 }
